--- a/guidebuddy.css
+++ b/guidebuddy.css
@@ -6,3 +6,25 @@
     background-color: aquamarine;
     opacity: 1;
 }
+.Nav{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+li{
+    display: inline;
+    float: right;
+
+}
+a{
+    display: inline-block;
+    padding: 8px;
+    background-color: beige;
+
+}
+ul{
+    background-color: beige;
+}
+.active{
+    background-color: #04AA6D;
+}
